[package]
name = "rtool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rtool"

[[bin]]
name = "cargo-rtool"

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
fern = { version = "0.6.2", features = ["colored"] }
rustc-demangle = "0.1.21"
colorful = "0.2.1"
cargo_metadata  = "0.18"
walkdir = "2"
wait-timeout = "0.2.0"
serde_json = "1.0.72"

[package.metadata.rust-analyzer]
rustc_private = true